--- a/scss/master.scss
+++ b/scss/master.scss
@@ -27,6 +27,8 @@ $white: #cc9;
 @import "../node_modules/bootstrap/scss/utilities/spacing";
 @import "../node_modules/bootstrap/scss/utilities/background";
 @import "../node_modules/bootstrap/scss/utilities/screenreaders";
+@import "../node_modules/bootstrap/scss/utilities/alert";
+
 
 .jumbotron{
   background-image: url('../img/lotrGroot.jpg');
